--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,20 +26,38 @@ jobs:
       - name: Deploy to Azure VM
         run: |
           ssh -i ~/.ssh/id_rsa -o StrictHostKeyChecking=no chef@172.166.192.99 << 'EOF'
-            if [ -d "/home/chef/fastapi-book-project" ]; then
-              cd /home/chef/fastapi-book-project
+            set -e  # Exit on error
+            echo "🔹 Connecting to Azure VM and deploying..."
+
+            # Ensure deployment directory exists
+            mkdir -p /home/chef/fastapi-book-project
+            cd /home/chef/fastapi-book-project
+
+            # Clone or update repository
+            if [ -d ".git" ]; then
+              echo "📥 Pulling latest changes..."
+              git reset --hard  # Reset any local changes
               git pull origin main
             else
-              git clone https://github.com/Eben-DevOps/fastapi-book-project.git /home/chef/fastapi-book-project
-              cd /home/chef/fastapi-book-project
+              echo "🚀 Cloning repository..."
+              git clone https://github.com/Eben-DevOps/fastapi-book-project.git .
             fi
 
-            # Stop and remove all running containers
+            # Stop running containers
+            echo "🛑 Stopping existing containers..."
             docker-compose down
 
-            # Remove all unused Docker images, networks, and volumes
+            # Clean up old images, networks, and volumes
+            echo "🧹 Cleaning up old Docker images..."
             docker system prune -a -f
 
-            # Rebuild and start the containers
-            docker-compose up --build -d
+            # Pull latest images
+            echo "📦 Pulling latest Docker images..."
+            docker-compose pull
+
+            # Rebuild and restart containers
+            echo "🔄 Restarting application..."
+            docker-compose up --force-recreate --build -d
+
+            echo "✅ Deployment completed!"
           EOF
