--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,17 +18,21 @@ jobs:
         with:
           python-version: "3.10"
 
+      - name: Upgrade Pip
+        run: |
+          python -m pip install --upgrade pip
+
       - name: Install Dependencies
         run: |
           pip install -r requirements.txt
 
       - name: Start FastAPI in the Background
         run: |
-          uvicorn main:app --host 0.0.0.0 --port 8000 &
+          uvicorn main:app --host 0.0.0.0 --port 8000 &  # Change to api.main:app if needed
 
       - name: Wait for FastAPI to Start
         run: |
-          sleep 5  # Wait to ensure FastAPI is ready
+          timeout 30 sh -c 'until curl --output /dev/null --silent --head --fail http://127.0.0.1:8000; do sleep 1; done'
 
       - name: Run Tests
         run: |
