--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,22 +18,23 @@ jobs:
         with:
           python-version: "3.10"
 
-      - name: Upgrade Pip
-        run: |
-          python -m pip install --upgrade pip
-
       - name: Install Dependencies
         run: |
           pip install -r requirements.txt
 
       - name: Start FastAPI in the Background
         run: |
-          uvicorn main:app --host 0.0.0.0 --port 8000 &  # Change to api.main:app if needed
+          nohup uvicorn main:app --host 0.0.0.0 --port 8000 > fastapi.log 2>&1 &
 
       - name: Wait for FastAPI to Start
         run: |
-          timeout 30 sh -c 'until curl --output /dev/null --silent --head --fail http://127.0.0.1:8000; do sleep 1; done'
+          echo "⌛ Waiting for FastAPI to start..."
+          timeout 60 sh -c 'until curl --output /dev/null --silent --head --fail http://127.0.0.1:8000; do sleep 2; done' || (echo "❌ FastAPI failed to start" && exit 1)
 
       - name: Run Tests
         run: |
           pytest --disable-warnings
+
+      - name: Debug Logs on Failure
+        if: failure()
+        run: cat fastapi.log
